burger menu overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
-.over-flow-x-hidden {
+.overflow-x-hidden {
   overflow-x: hidden;
 }
+
